# backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-00c89618f6472a34b3012b5b66335c7ee58c9be90b8a88a3e7f531750f95ee37.json  query-08a4cfc91ab42ff534c44acaa4aa7414219dcf0f90bc7a440dd08b5b73973870.json  query-09a574071e69cad842fc424f3acc6e399e313ac121f0df94656017a99b7ef831.json  query-0c1bc56daf1863883fd8f47ac9177b19202067be01ca50d58c21fc170a2bb625.json  query-11ca1818ad1d431492902899d254cad18c77ba870d5edaa2305cda622e446f2d.json  query-15987f7ca0f5138df520d3c06fe96b11681800f9a31f1b1e83a744eaeb88cf80.json  query-16989d95cefe6f6da4ce0513af6487b6b960c81b7b5169bcf1201c88fe8e3997.json  query-1ef6868d5346bbce08fe83a1f57e5c04edc703f8b58499f7d79e973d003c4722.json  query-201415a0f560573d227f78869512ee64b228b3b4cdae38d1f02ce177f2c7f994.json  query-206d00d8d41506e927c445aee296e592579b61282a37c51889a3eb13ffeb3994.json  query-240c7c9ef7201928831b5cab32a60491a671628a682ac2c6366cb098c6e2a377.json  query-30989eb4f7b6d9c26021045d44612002baa6677250c377e1dfc3c49cbf065e91.json  query-313af87d14ed799380a2dacd406b43bf0c0bcde6925849ddf5139f5f021c96f1.json  query-3249f7c62fece147de571c1d857628062afadc5cb6bab3642bac741e186d8075.json  query-3789ade03e96671275a5db354e13adeebd283228581d40a48bfc0386305aaff3.json  query-3b34054b7fa0fe23c528ca18b96e451be2e0d5b650db8cab49c31158137e50f1.json  query-43eecbe247782a62ceeef88e2b5048e70a47d4a4ade913effad26d67986f844b.json  query-61c8c222706b82a9c2d7fc134e296fd44b3f84b060c6a6511e3f2b85f93c4421.json  (+58 more)
migrations/: 0001_create_users.sql  (+13 more)
(+137 files in other folders)
